# openvpn-gui

./: .appveyor.yml  .clang-format  .editorconfig  .git-blame-ignore-revs  .gitignore  .kateconfig  .pre-commit-config.yaml  .travis-build-jsonc.sh  .travis-build-openssl.sh  .travis.yml  BUILD.rst  CHANGES.rst  CMakeLists.txt  CMakePresets.json  COPYING  Makefile  Makefile.am  Makefile.in  OpenVPN GUI ReadMe.txt  README  README.md  README.rst  README_BONDING.md  TODO  access.c  access.h  acinclude.m4  appveyor.sh  appveyor.yml  as.c  as.h  build-msvc.ps1  changes.txt  chartable.h  config-msvc.h  config-msvc.h.in  config.h.in  config.h.in.cmake  config_parser.c  config_parser.h  (+70 more)
.github/workflows/: msbuild.yml
bonding/: CMakeLists.txt  README.md
bonding/include/: bonding_config.h  bonding_manager.h  bonding_types.h  nic_detector.h  openvpn_manager.h  packet_distributor.h
bonding/service/: bonding_service.c  service_ipc.c
bonding/src/: bonding_manager.c  config_parser.c  nic_detector.c  openvpn_manager.c  packet_distributor.c
bonding/tests/: test_config_parser.c
bonding/ui/: bonding_dialog.c  bonding_status.c
bonding/utils/: logging.c  routing_helper.c
docs/bonding/: api.md  architecture.md  configuration.md  example.ovpn-bond
nsis/: english.nsh  openvpn-gui.nsi
plap/: Makefile.am  openvpn-plap-install.reg  openvpn-plap-res.rc  openvpn-plap-uninstall.reg  openvpn-plap.manifest  openvpn_plap.def  plap_common.c  plap_common.h  plap_connection.c  plap_connection.h  plap_dll.c  plap_dll.h  plap_provider.c  resource.h  stub.c  test-plap-res.rc  test-plap.manifest  test_plap.cpp  ui_glue.c  ui_glue.h
qrcodegen/: qrcodegen.c  qrcodegen.h
res/: cleanup_res_ids.sh  openvpn-gui-res-cs.rc  openvpn-gui-res-de.rc  openvpn-gui-res-dk.rc  openvpn-gui-res-el.rc  openvpn-gui-res-en-msvc.rc  openvpn-gui-res-en.rc  openvpn-gui-res-es.rc  openvpn-gui-res-fa.rc  openvpn-gui-res-fi.rc  openvpn-gui-res-fr.rc  openvpn-gui-res-it.rc  openvpn-gui-res-jp.rc  openvpn-gui-res-kr.rc  openvpn-gui-res-nl.rc  openvpn-gui-res-no.rc  openvpn-gui-res-pl.rc  openvpn-gui-res-pt.rc  openvpn-gui-res-ru.rc  openvpn-gui-res-se.rc  openvpn-gui-res-tr.rc  openvpn-gui-res-ua.rc  openvpn-gui-res-zh-hans.rc  openvpn-gui-res-zh-hant.rc  openvpn-gui-res.rc  openvpn-gui.manifest
vcpkg_manifests/openssl_1.1.1/: vcpkg.json
vcpkg_manifests/openssl_3/: vcpkg.json
